{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 3742,
  "lineage": "afbbb5a0-9319-78d2-2e7e-9f46a8bbe946",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "bboys-rt-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0056995c6c9b7af25",
            "default_route_table_id": "rtb-0056995c6c9b7af25",
            "id": "rtb-0056995c6c9b7af25",
            "owner_id": "782863115905",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06380f4ac75864ca4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bboys-RT"
            },
            "tags_all": {
              "Name": "bboys-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bboys-igw",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-0c00e71713e525bdf",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c00e71713e525bdf",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bboys-Default-SG"
            },
            "tags_all": {
              "Name": "bboys-Default-SG"
            },
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bboys-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bboys-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:internet-gateway/igw-06380f4ac75864ca4",
            "id": "igw-06380f4ac75864ca4",
            "owner_id": "782863115905",
            "tags": {
              "Name": "bboys-IGW"
            },
            "tags_all": {
              "Name": "bboys-IGW"
            },
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "dependencies": [
            "aws_vpc.bboys-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "bboys-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:782863115905:loadbalancer/app/bboys-alb/5faa9e18070b4cae",
            "arn_suffix": "app/bboys-alb/5faa9e18070b4cae",
            "desync_mitigation_mode": "defensive",
            "dns_name": "bboys-alb-1694125363.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:782863115905:loadbalancer/app/bboys-alb/5faa9e18070b4cae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bboys-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c86a7e23b0679c30"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0152c8c465321ed4d"
              },
              {
                "subnet_id": "subnet-048a2b9865daa08a7"
              }
            ],
            "subnets": [
              "subnet-0152c8c465321ed4d",
              "subnet-048a2b9865daa08a7"
            ],
            "tags": {
              "Name": "bboys-ALB"
            },
            "tags_all": {
              "Name": "bboys-ALB"
            },
            "vpc_id": "vpc-032e0a4897936137f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.bboys-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bboys-443-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:782863115905:listener/app/bboys-alb/5faa9e18070b4cae/af68091f32800ac7",
            "certificate_arn": "arn:aws:iam::782863115905:server-certificate/bboys-alb-cert",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:782863115905:targetgroup/bboys-ec2-tg/0b30c87061c1fc1e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:782863115905:listener/app/bboys-alb/5faa9e18070b4cae/af68091f32800ac7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:782863115905:loadbalancer/app/bboys-alb/5faa9e18070b4cae",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_server_certificate.alb-cert",
            "aws_lb.bboys-alb",
            "aws_lb_target_group.ec2-tg",
            "aws_security_group.bboys-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:782863115905:targetgroup/bboys-ec2-tg/0b30c87061c1fc1e",
            "arn_suffix": "targetgroup/bboys-ec2-tg/0b30c87061c1fc1e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:782863115905:targetgroup/bboys-ec2-tg/0b30c87061c1fc1e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bboys-ec2-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "dependencies": [
            "aws_vpc.bboys-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bboys-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0895027f07fcabdb7",
            "id": "rtb-0895027f07fcabdb7",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bboys-private-RT"
            },
            "tags_all": {
              "Name": "bboys-private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bboys-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08401d145416ee22d",
            "route_table_id": "rtb-0895027f07fcabdb7",
            "subnet_id": "subnet-086d7cedb8486e84e"
          },
          "dependencies": [
            "aws_default_route_table.bboys-rt-main",
            "aws_internet_gateway.bboys-igw",
            "aws_route_table.bboys-rt-private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c766e99fd423a768",
            "route_table_id": "rtb-0895027f07fcabdb7",
            "subnet_id": "subnet-0207e4e9a862ec1e4"
          },
          "dependencies": [
            "aws_default_route_table.bboys-rt-main",
            "aws_internet_gateway.bboys-igw",
            "aws_route_table.bboys-rt-private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-route-table-associaiton",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057121726a56d5b56",
            "route_table_id": "rtb-0056995c6c9b7af25",
            "subnet_id": "subnet-0152c8c465321ed4d"
          },
          "dependencies": [
            "aws_default_route_table.bboys-rt-main",
            "aws_internet_gateway.bboys-igw",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044b660364bad58f0",
            "route_table_id": "rtb-0056995c6c9b7af25",
            "subnet_id": "subnet-048a2b9865daa08a7"
          },
          "dependencies": [
            "aws_default_route_table.bboys-rt-main",
            "aws_internet_gateway.bboys-igw",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bboys-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-0261fc3ba6caf798c",
            "description": "secrutiy group for ec2s in private subnet",
            "egress": [],
            "id": "sg-0261fc3ba6caf798c",
            "ingress": [],
            "name": "terraform-20230420192049686800000001",
            "name_prefix": "terraform-",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bboys-SG-EC2"
            },
            "tags_all": {
              "Name": "bboys-SG-EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bboys-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bboys-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-0c86a7e23b0679c30",
            "description": "security group for elb",
            "egress": [],
            "id": "sg-0c86a7e23b0679c30",
            "ingress": [],
            "name": "terraform-20230420192122314700000004",
            "name_prefix": "terraform-",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bboys-ELB-SG"
            },
            "tags_all": {
              "Name": "bboys-ELB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default-sg-443-egress-to-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "443 outbout to ec2",
            "from_port": 443,
            "id": "sgrule-1109059028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c00e71713e525bdf",
            "security_group_rule_id": "sgr-0c78679555327dfce",
            "self": false,
            "source_security_group_id": "sg-0261fc3ba6caf798c",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.bboys-ec2-sg",
            "aws_vpc.bboys-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default-sg-443-egress-to-s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "443 outbound to s3 managed prefix",
            "from_port": 443,
            "id": "sgrule-3191415752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-63a5400a"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-0c00e71713e525bdf",
            "security_group_rule_id": "sgr-08078a3bec105e886",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_vpc.bboys-vpc",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default-sg-80-egress-to-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "80 outbound to ec2",
            "from_port": 80,
            "id": "sgrule-190465924",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c00e71713e525bdf",
            "security_group_rule_id": "sgr-0825d0b3a8abe0b34",
            "self": false,
            "source_security_group_id": "sg-0261fc3ba6caf798c",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.bboys-ec2-sg",
            "aws_vpc.bboys-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default-sg-ssh-ingress-from-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh ingress from any",
            "from_port": 22,
            "id": "sgrule-1971156824",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c00e71713e525bdf",
            "security_group_rule_id": "sgr-0203f33d97ebe8eac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_vpc.bboys-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2-sg-443-egress-to-s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "443 egress to s3 managed prefix",
            "from_port": 443,
            "id": "sgrule-3509368910",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-63a5400a"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-0261fc3ba6caf798c",
            "security_group_rule_id": "sgr-0aff0bd0fc31c7397",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bboys-ec2-sg",
            "aws_vpc.bboys-vpc",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2-sg-443-ingress-from-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "443 ingress from elb to ec2",
            "from_port": 443,
            "id": "sgrule-241162343",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0261fc3ba6caf798c",
            "security_group_rule_id": "sgr-0447027f6d0585efd",
            "self": false,
            "source_security_group_id": "sg-0c86a7e23b0679c30",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bboys-ec2-sg",
            "aws_security_group.bboys-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2-sg-80-ingress-from-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "80 ingress from elb to ec2",
            "from_port": 80,
            "id": "sgrule-2266967902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0261fc3ba6caf798c",
            "security_group_rule_id": "sgr-0c42aa7e6fbe6c7e8",
            "self": false,
            "source_security_group_id": "sg-0c86a7e23b0679c30",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bboys-ec2-sg",
            "aws_security_group.bboys-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-sg-egress-443-to-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "443 outbound from elb to ec2",
            "from_port": 443,
            "id": "sgrule-2773874351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c86a7e23b0679c30",
            "security_group_rule_id": "sgr-0f9753aa7ddcc9cfd",
            "self": false,
            "source_security_group_id": "sg-0261fc3ba6caf798c",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bboys-ec2-sg",
            "aws_security_group.bboys-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-sg-egress-80-to-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "80 outbound from elb to ec2",
            "from_port": 80,
            "id": "sgrule-1467028496",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c86a7e23b0679c30",
            "security_group_rule_id": "sgr-0059146f1733ee5d4",
            "self": false,
            "source_security_group_id": "sg-0261fc3ba6caf798c",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bboys-ec2-sg",
            "aws_security_group.bboys-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-sg-ingress-443-from-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ingress on 443 from internet",
            "from_port": 443,
            "id": "sgrule-2543390203",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c86a7e23b0679c30",
            "security_group_rule_id": "sgr-02b0faf9b60718dae",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bboys-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-086d7cedb8486e84e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086d7cedb8486e84e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bboys-private-us-east-1a"
            },
            "tags_all": {
              "Name": "bboys-private-us-east-1a"
            },
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0207e4e9a862ec1e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0207e4e9a862ec1e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bboys-private-us-east-1b"
            },
            "tags_all": {
              "Name": "bboys-private-us-east-1b"
            },
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0152c8c465321ed4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0152c8c465321ed4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bboys-public-us-east-1a"
            },
            "tags_all": {
              "Name": "bboys-public-us-east-1a"
            },
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "dependencies": [
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-048a2b9865daa08a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048a2b9865daa08a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bboys-public-us-east-1b"
            },
            "tags_all": {
              "Name": "bboys-public-us-east-1b"
            },
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "dependencies": [
            "aws_vpc.bboys-vpc",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bboys-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:vpc/vpc-032e0a4897936137f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/24",
            "default_network_acl_id": "acl-02f6d5f72085344d7",
            "default_route_table_id": "rtb-0056995c6c9b7af25",
            "default_security_group_id": "sg-0c00e71713e525bdf",
            "dhcp_options_id": "dopt-04b46d2964e3827c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032e0a4897936137f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0056995c6c9b7af25",
            "owner_id": "782863115905",
            "tags": {
              "Name": "bboys-vpc",
              "name": "bboys-vpc"
            },
            "tags_all": {
              "Name": "bboys-vpc",
              "name": "bboys-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:vpc-endpoint/vpce-06ff2b8f6263441cb",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-06ff2b8f6263441cb",
            "owner_id": "782863115905",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "bboys-S3-Endpoint"
            },
            "tags_all": {
              "Name": "bboys-S3-Endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-032e0a4897936137f"
          },
          "dependencies": [
            "aws_vpc.bboys-vpc"
          ]
        }
      ]
    }
  ]
}